# mito-morphology

./: .gitignore  LICENSE  README.md  pyproject.toml
docker/napari-viz/: Dockerfile  README.md  entrypoint.sh  environment.yml  explore.py  napari_bridge.py  run.sh
docs/design/2026-07-18-agnostic-composable-architecture/: 00-SYNTHESIS.md  05-data-and-2d-mip-rationale.md  07-positioning-and-moat.md  concern-01-blast-radius-coupling.md  concern-02-prior-art-init-draft.md  concern-03-landscape-web-research.md  concern-04-target-architecture-seams.md  concern-05-nellie-anisotropy-evidence.md  concern-06-moat-and-positioning.md
src/mitomorph/: __init__.py  cellqc.py  cellseg.py  cellseg_viz.py  cli.py  config.py  extract.py  integrate.py  inventory.py  io.py  metrics.py  mitoseg.py  mitoseg_viz.py  omezarr.py  provenance.py  quantify.py  quantify_viz.py  segment.py  viz.py  viz_common.py
